# splamouse

./: Cargo.toml  README.md
crates/joycon/src/: hid.rs
joytk/src/: interface.rs  main.rs
splamouse/: Cargo.toml  README-ja.md  README.md
splamouse/src/: main.rs
